# WarAgainstTheAntPeople

./: .clandold  .gitignore  2  CMakeLists.txt  README.md  compile.bat  get_compile_commands.bat
include/: GameEngine.h  GameState.h  MenuState.h  ProjectConfig.h  ProjectConfig.h.in
include/Entities/: Bomb.h  Entity.h  Guy.h
include/Lib/: AnimationGenerator.h  AnimationGenerator.hpp  AudioManager.h  CollisionGrid.h  Gamestate.h  Helper.hpp
include/Tools/: Bombs.h  Fire.h  Mallet.h
include/Types/: Animation.h  Collisions.h
include/ai/: GuyAI.h
include/anim/: Anim.hpp  BuildsiteAnim.hpp  GuyAnim.hpp  NotMovingAnim.hpp  ToolAnim.hpp
include/componentFns/: BuildComponentFns.h  HivemindComponentFns.h
include/components/: Collisions.hpp  Components.hpp  GuyComponents.hpp  HivemindComponents.hpp
include/data/: Attrs.hpp  CarryAttrs.hpp  EntityAttributes.h  TextureBank.h  TextureStore.hpp
include/ecs/: ComponentArray.hpp  ComponentManager.hpp  Components.hpp  ECS.hpp  Entity.hpp  System.hpp  SystemManager.hpp
include/engine/: CollisionGrid.h  Collisions.h  Components.hpp  Engine.h  GameEngine.h  GameState.h  MainState.h  MenuState.h  StateManager.h  TextureStore.hpp
include/entities/: Entity.hpp  TestEntity.hpp
include/entity/: Entity.h  EntityAttributes.h  Guy.h  Mallet.h  Tool.h  ToolHolder.h
include/helper/: AnimationGenerator.hpp  Debug.hpp  Helper.hpp
include/src/: Makefile  cmake_install.cmake
include/state/: AudioManager.hpp  CollisionGrid.hpp  CollisionManager.hpp  Gamestate.hpp  GraphicsManager.hpp
include/state_machines/: GuySM.h  HivemindSM.h
include/states/: MainState.h
include/systems/: BuildSystem.h  CarrySystem.h  CollisionHandlerSystem.h  CollisionSystem.h  DamageSystem.h  DrawSystem.h  FollowsMouseSystem.h  GeneralCollisionHandlerSystem.h  GuyBrainSystem.h  HivemindBrainSystem.h  HivemindSystem.cpp  Persuing.h  PersuingSystem.h  PhysicsSystem.h  ScanningSystem.h  ShootSystem.h  SortedDrawSystem.h  ToolClick.h  ToolMouse.h  TransformSystem.h
include/tools/: Tool.h
include/types/: Animation.hpp  CollisionShapes.hpp  Collisions.hpp  ToolStates.hpp
include/util/: ComponentAdders.h  ComponentFns.h  DrawFns.h  Helper.h  Random.h  Spawners.h  Vec2.hpp
ninja_out/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
src/: AudioManager.hpp  CMakeLists.txt  CollisionGrid.cpp  CollisionGrid.hpp  Gamestate.cpp  Gamestate.hpp  compile_commands.json  main.cpp
src/ai/: CMakeLists.txt  GuyAI.cpp
src/componentFns/: BuildComponentFns.cpp  CMakeLists.txt  HivemindComponentFns.cpp
src/engine/: CMakeLists.txt  CollisionGrid.cpp  Collisions.cpp  Engine.cpp  GameEngine.cpp  MainState.cpp  MenuState.cpp
src/entities/: Bomb.cpp  Bomb.hpp  Entity.cpp  Entity.hpp  FloorPanel.cpp  Guy.cpp  Guy.hpp  Nuke.hpp  TestEntity.cpp
src/entity/: CMakeLists.txt  Entity.cpp  Mallet.cpp  Tool.cpp  ToolHolder.cpp
src/helper/: Debug.cpp
src/lib/: AnimationGenerator.cpp  AudioManager.cpp  CollisionManager.cpp  GraphicsManager.cpp
src/state/: AudioManager.cpp  CollisionGrid.cpp  CollisionManager.cpp  Gamestate.cpp  GraphicsManager.cpp
src/state_machines/: CMakeLists.txt  GuySM.cpp
src/states/: CMakeLists.txt  MainState.cpp
src/systems/: BuildSystem.cpp  CMakeLists.txt  CarrySystem.cpp  CollisionHandler.cpp  CollisionSystem.cpp  CollisionUpdater.cpp  (+14 more)
(+77 files in other folders)
